# synology_hikvision_sync

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  pyproject.toml  test_cron.sh
.github/workflows/: ci-cd.yml  test.yml
src/: apply_camera_retention.sh  process_hikvision_folder.py  sync_camera_synology.sh  sync_hikvision_cameras.py
tests/: conftest.py  setup_test_data.sh  test_acquire_lock.py  test_atomic_write.py  test_camera_discovery.py  test_create_directories.py  test_discover_cameras.py  test_edge_cases.py  test_extraction.py  test_filename_collision_warning.py  test_get_unique_filename.py  test_hikvision_scheduler.py  test_hikvision_sync_directories.py  test_hikvision_sync_init.py  test_hikvision_sync_integration.py  test_hikvision_sync_locking.py  test_hikvision_sync_logging.py  test_hikvision_sync_new_parameters.py  test_hikvision_sync_process_camera.py  test_hikvision_sync_process_media.py  test_hikvision_sync_retention_policy.py  test_hikvision_sync_run.py  test_hikvision_sync_summary_report.py  test_image_sync_toggle.py  test_init.py  test_integration.py  test_log.py  test_log_message.py  test_loggers.py  test_parse_bool_env.py  test_parse_camera_translation.py  test_parse_camera_translation_errors.py  test_process_camera.py  test_release_lock_errors.py  test_retention.bats  test_retention_policy.py  test_run.py  test_segment_parsing.py  test_sync_camera.bats
