[project]
name = "synology-hikvision-sync"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "libhikvision>=0.3.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]
