[project]
name = "synology-hikvision-sync"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "libhikvision>=0.3.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.14.9",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = ["libhikvision.*"]
ignore_missing_imports = true
